--- a/TODO
+++ b/TODO
@@ -1,10 +1,7 @@
 
   - Need more succinct way to access dispatch, getState, etc. from within html
-  - More streamlined way to create new html web components than having to do the
-    register state/(un)subscribe rigamarole
+  - copy over StatefulHTML class to simpleWWW and integrate it (w/README)
 
-  - Add an AI tag that places pieces at random on its turn
-  - Implement Go liberty rules
   - Add switch for turn-based vs real-time
     - turn-based ends your turn whenever you place a piece
     - real-time queues up placements made not on your own turn and then
