--- a/TODO
+++ b/TODO
@@ -1,4 +1,27 @@
-  - issue on server with clients not disconnecting on refresh
+  - bugs:
+    - issue on server with clients not disconnecting on refresh
 
   - profiling how many games/clients/apm can be supported simultaneously
+    - allow creating a game and then dynamically adding AI players to it
+    - track how much time has happened between a player's endTurn
+      and start of their next turn (with a running average?)
+
   - more interesting game mechanics
+    - click and drag:
+      - refactor to move click handling of the canvas inside GameBoard class
+    - falling pieces:
+      - state for pieces that are falling (and handling whether another placement
+        there would be legal)
+      - timing for falling pieces to become regular pieces
+      - rendering of falling pieces as increasing-sized circles inside an outline
+        of their final position
+    - mana:
+      - state for how many pieces available to place, and you don't place them if
+        there is no mana for it
+      - rate that mana is added (could be interested if there is none)
+      - display mana somewhere (along the bottom?)
+
+  - scoring:
+    - count and display number of pieces lost to being captured (as negative)
+    - use floodfill algorithm on empty squares to count them up
+      - how to handle ambiguous areas?
