--- a/TODO
+++ b/TODO
@@ -1,11 +1,17 @@
+  - simplewww:
+    - add a view-router tag that handles which of its children to display
+      at a time based on screen state (or add this to stateful-client?)
+
   - bugs:
     - issue on server with clients not disconnecting on refresh
-    - don't allow joining games that are started
-    - seems like it can really only support one game at a time..
 
 
   - profiling how many games/clients/apm can be supported simultaneously
     - dispatch action queue as a single action at the start of your turn
+    - confirm whether this is just unfocused browser windows losing the
+      socket connection
+    - perhaps try having the server set the timer
+    - also try deploying to NY server instead of SF
 
   - more interesting game mechanics
     - click and drag:
