--- a/TODO
+++ b/TODO
@@ -3,15 +3,12 @@
 
 
   - bugs:
+    - numConnectedClients is wrong
+      either how it's accounted or clients aren't disconnecting
 
 
   - open issues:
-    - dispatch action queue as a single action at the start of your turn
-      - refactor reducers into separate ones
-      - or actually just attach action queue to the END_TURN action
-
-    - should be storing clientID on the pieces instead of bouncing off of color
-      - clientID should be the thing and not color at all.
+    - handle other player disconnecting (game freezes)
 
     - durations should be the turn that the event ends, not the duration
       because you can be off-by-one depending on when you receive that action
