--- a/TODO
+++ b/TODO
@@ -3,17 +3,14 @@
 
 
   - bugs:
+    - can either go negative when clicking and dragging
+      or will diverge if client doesn't respect it
     - numConnectedClients is wrong
       either how it's accounted or clients aren't disconnecting
 
 
   - open issues:
     - handle other player disconnecting (game freezes)
-
-    - durations should be the turn that the event ends, not the duration
-      because you can be off-by-one depending on when you receive that action
-      - is there a way to encapsulate a duration into a class or something
-        that takes care of itself?
 
     - tabbing away pauses the socket and messes with avg TR
       -  could have a timeout where the server ends your turn for you
